# gyrus

./: CMakeLists.txt  README.adoc  README.md
include/brainyguy/: gyrus.hpp
sample/: simple.cpp
